src/objects/ints__Credit_Pull_Parameters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>ints__CRA_Account_Password__c</fullName>
        <label>CRA Account Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CRA_Account_Username__c</fullName>
        <label>CRA Account Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Credit_Reporting_Agency__c</fullName>
        <label>Credit Reporting Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Equifax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equifax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__Experian__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Experian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__Receiving_Party_ID__c</fullName>
        <label>Receiving Party ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Submitting_Party_ID__c</fullName>
        <label>Submitting Party ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__TransUnion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TransUnion</label>
        <type>Checkbox</type>
    </fields>
    <label>Meridian Link Credit Pull Parameters</label>
</CustomObject>